=== 1.7 / 2015-08-05

* 1 bug fix:

  * RubyMine does not fully initialize the project when running RSpec, meaning
    that while Rake is defined, Rake::DSL is not. As such, we need to prevent
    the Rake task from loading unless Rake::DSL is present.

=== 1.6 / 2015-07-30

* 2 minor enhancements:

  * Improve the Minitest and RSpec test helpers so that they ignore the error
    +cause+ if it is not included as part of the assertion. The specification
    of the +cause+ is recommended if you have specific values you want to
    compare.

  * Improve +kinetic_cafe_error_handler+ so that if it is called with an error
    class instead of an instance of an error, it will construct the error
    instance with the provided parameters. This makes custom +rescue_from+
    constructions cleaner.

=== 1.5 / 2015-07-29

* 2 bug fixes:

  * Handle error causes correctly for Ruby 2.1 or later, where <tt>raise
    Exception, cause: RuntimeError.new</tt> does not pass the +cause+ the
    exception constructor, but it still sets the cause correctly on the
    exception. These changes make this correct for both +raise+ construction
    and normal construction.

  * The RSpec helpers did not work because they spelled the class +Rspec+, not
    +RSpec+. This has been fixed.

* 2 development changes:

  * Fixed some test typos.

  * Add i18n-tasks for CSV exports.

=== 1.4.1 / 2015-07-08

* 1 bug fix

  * Fixed an error with loading error_tasks.rake from the Rails engine.

=== 1.4 / 2015-07-07

* 2 minor enhancements

  * Changed how kcerror:translations generates the translation YAML for
    consistent comparison (it no longer uses the YAML library to do this). The
    file generated will always be for language +kc+ so that this can be used
    with i18n-tasks.

* 4 bug fixes

  * Task kcerror:defined would error out if there were no defined descendants.
  * Task kcerror:translations would error out if there were no defined
    descendants.